force-app/main/default/objects/ProcessTemplate__c/ProcessTemplate__c.object-meta.xml
<CustomObject>
    <label>Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>