force-app/main/default/objects/ProcessTemplate__c/fields/EmployeeProcess__c.field-meta.xml
<CustomField>
    <fullName>EmployeeProcess__c</fullName>
    <label>Employee Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern Process</fullName>
            </value>
            <value>
                <fullName>Probation Process</fullName>
            </value>
            <value>
                <fullName>Rotation Process</fullName>
            </value>
            <value>
                <fullName>Promotion Process</fullName>
            </value>
            <value>
                <fullName>Review Process</fullName>
            </value>
            <value>
                <fullName>Renew Process</fullName>
            </value>
            <value>
                <fullName>Resignation Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>