force-app/main/default/objects/ProcessTemplate__c/fields/TypeofProcess__c.field-meta.xml
<CustomField>
    <fullName>TypeofProcess__c</fullName>
    <label>Type of Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recruitment Process</fullName>
            </value>
            <value>
                <fullName>Check List</fullName>
            </value>
            <value>
                <fullName>Intern Process</fullName>
                <isActive>false</isActive>
                <label>Intern Process</label>
            </value>
            <value>
                <fullName>Offboarding Process</fullName>
                <isActive>false</isActive>
                <label>Offboarding Process</label>
            </value>
            <value>
                <fullName>Probation Process</fullName>
                <isActive>false</isActive>
                <label>Probation Process</label>
            </value>
            <value>
                <fullName>Promotion Process</fullName>
                <isActive>false</isActive>
                <label>Promotion Process</label>
            </value>
            <value>
                <fullName>Renew Process</fullName>
                <isActive>false</isActive>
                <label>Renew Process</label>
            </value>
            <value>
                <fullName>Review Process</fullName>
                <isActive>false</isActive>
                <label>Review Process</label>
            </value>
            <value>
                <fullName>Rotation Process</fullName>
                <isActive>false</isActive>
                <label>Rotation Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>